fixed spacing on main

--- a/src/css/partials/global.css
+++ b/src/css/partials/global.css
@@ -11,7 +11,11 @@ body {
   font-family: var(--bs-body-font-family);
   font-size: 18px;
   margin: 0 auto;
-  /* max-width: 1200px; */
+}
+
+main {
+  max-width: 1400px;
+  margin: 0 auto;
 }
 
 a:link,
